Add support for updating group resources
